adding instruction for running Leaflet example class